[project]
name = "ComfyUI"
version = "0.19.3"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "comfyui-frontend-package==1.42.12",
    "comfyui-workflow-templates==0.9.57",
    "comfyui-embedded-docs==0.4.3",
    "comfy-kitchen>=0.2.8",
    "comfy-aimdo>=0.2.12",
    "torchsde",
    "numpy>=1.25.0",
    "einops",
    "transformers>=4.50.3",
    "tokenizers>=0.13.3",
    "sentencepiece",
    "safetensors>=0.4.2",
    "aiohttp>=3.11.8",
    "yarl>=1.18.0",
    "pyyaml",
    "pillow>12.1",
    "scipy",
    "tqdm",
    "psutil",
    "alembic",
    "SQLAlchemy>=2.0",
    "av>=14.2.0",
    "filelock",
    "requests",
    "simpleeval>=1.0.0",
    "blake3",
    "pyopengl",
    "glfw",
    #non essential dependencies:
    "kornia>=0.7.1",
    "spandrel",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "setuptools>=80.9.0",
#    "torch>=2.9.0,<2.10.0",
    "torch",
    "torchvision",
    "torchaudio",
    #    "triton-windows<3.4",
    "triton",
    ### comfyui manager
    "GitPython",
    ### optimizations
    "flash-attn",
    "sageattention",
    ### additional
    "hf_xet",
    "lpips",
    "pywavelets",
    "librosa",
    "numba>=0.63.0", # for librosa
    "onnx",
    "opencv-python",
    "imageio",
    "diffusers",
    "lark",
    "rotary-embedding-torch",
    "matplotlib",
    "ftfy",
    "webcolors",
    "mediapipe",
    "scikit-image",
    "omegaconf",
    "accelerate",
    "gguf",
    "onnxruntime-gpu",
    "deepdiff>=8",
    "xformers",
    "nvidia-ml-py",
    # crytools
    "piexif",
    "py-cpuinfo",
    # supir
    "pytorch_lightning",
    "open-clip-torch",
    "color-matcher",
    # qwen-tts
    "qwen-tts",
    #    # TTS Audio Suite
    #    # Chatterbox
    #    "s3tokenizer",
    #    "cached-path",
    #    "conformer",
    #    # F5-TTS
    #    "audio-separator",
    #    "hydra-core",
    #    "x-transformers",
    #    "jieba",
    #    "pypinyin",
    #    "torchdiffeq",
    #    "ema_pytorch",
    #    "datasets",
    #    # Higgs Audio 2
    ##    "descript-audio-codec",
    #    "vector-quantize-pytorch",
    #    "dacite",
    #    # RVC Voice Conversion
    #    "faiss-cpu",
    #    "torchcrepe",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"



[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]
xformers = [
    { index = "pytorch-cu128" },
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

#flash-attn = { path = "../flash_attn-2.7.4.post1+cu128torch2.7.0cxx11abiFALSE-cp312-cp312-win_amd64.whl" }
#flash-attn = { path = "../flash_attn-2.8.3+cu130torch2.9.1cxx11abiTRUE-cp312-cp312-win_amd64.whl" }
#sageattention = { path = "../sageattention-2.2.0+cu130torch2.9.1cxx11abitrue-cp312-cp312-win_amd64.whl" }


#diffusers = { git = "https://github.com/huggingface/diffusers" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

#[[tool.uv.index]]
#name = "pytorch-cu130"
#url = "https://download.pytorch.org/whl/cu130"
#explicit = true

#[[tool.uv.index]]
#name = "pytorch-cu131"
#url = "https://download.pytorch.org/whl/cu131"
#explicit = true



[tool.ruff]
lint.select = [
    "N805", # invalid-first-argument-name-for-method
    "S307", # suspicious-eval-usage
    "S102", # exec
    "E",
    "T", # print-usage
    "W",
    # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
    "F",
]

lint.ignore = ["E501", "E722", "E731", "E712", "E402", "E741"]

exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
    "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "too-few-public-methods",
    "too-many-public-methods",
    "too-many-instance-attributes",
    "too-many-positional-arguments",
    "broad-exception-raised",
    "too-many-lines",
    "invalid-name",
    "unused-argument",
    "broad-exception-caught",
    "consider-using-with",
    "fixme",
    "too-many-statements",
    "too-many-branches",
    "too-many-locals",
    "too-many-arguments",
    "too-many-return-statements",
    "too-many-nested-blocks",
    "duplicate-code",
    "abstract-method",
    "superfluous-parens",
    "arguments-differ",
    "redefined-builtin",
    "unnecessary-lambda",
    "dangerous-default-value",
    "invalid-overridden-method",
    # next warnings should be fixed in future
    "bad-classmethod-argument", # Class method should have 'cls' as first argument
    "wrong-import-order", # Standard imports should be placed before third party imports
    "ungrouped-imports",
    "unnecessary-pass",
    "unnecessary-lambda-assignment",
    "no-else-return",
    "unused-variable",
]
